hphp/hack/test/typecheck/async_function_implicit_return_wrong_type3.php.exp
File "async_function_implicit_return_wrong_type3.php", line 14, characters 10-10:
Invalid return type (Typing[4110])
File "async_function_implicit_return_wrong_type3.php", line 14, characters 10-10:
This is void because this function implicitly returns void
File "async_function_implicit_return_wrong_type3.php", line 14, characters 53-67:
It is incompatible with an object of type Awaitable
